--- a/moodle-styles.css
+++ b/moodle-styles.css
@@ -15,4 +15,8 @@
 .core-tabs-bar .tabs-wp a[aria-selected=true].tab-slide .tab-button-icon {
   color: #556b2f;
 }
-
+/* Tabs color*/
+.core-tabs-bar .slides a.tab-slide[aria-selected=true] {
+  color: #5069A1 !important;
+  border-bottom-color: #DEB887 !important;
+}
