--- a/moodle-styles.css
+++ b/moodle-styles.css
@@ -20,3 +20,6 @@
   color: #556b2f !important;
   border-bottom-color: #556b2f !important;
 }
+.block-myoverview .nav.nav-tabs li.nav-item :nth-child(1) {
+    display: none;
+}
